--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -395,6 +395,11 @@ nav .current a {
 	margin-top:20px;
 }
 
+.item a:hover {
+	color:$blue;
+	text-decoration: underline;
+}
+
 .item p {
 	font-size:105%;
 	color:$gray;
@@ -406,7 +411,9 @@ nav .current a {
 }
 
 .item .small {
-	font-size:85%;
+	font-size:75%;
+	text-align: right;
+	padding-top:5px;
 }
 
 .workIntro {
